# ExterminationFrelon

./: .gitignore  ExplicationCode.md  InstallationRaspy.md  README.md  REAMDE.md  main.py  pyproject.toml  run.sh  testImg.py
IA/: README.md  REAMDE.md  augmente.py  export.py  newDataset.sh  pyproject.toml  splitVideoImage.py  train.py
Rasbery/: REAMDE.md  main.py  mainNoUi.py  oldsetup.py  requirements.txt  setup.py  testMateriels.py
Rasbery/Cam/: README.md  __init__.py  utilsCamera.py  yolo_model.py
Rasbery/Config/: calibrationCamera.py  config.json  photoForCalib.py
Rasbery/Galvo/: README.md  __init__.py  mcp48xx.py  utilsGalvo.py
Rasbery/Profondeur/: README.md  __init__.py  utilsProfondeur.py
Rasbery/config/: __init__.py  config.json  utilsConfig.py
